--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,13 @@
 /* navbar style */
 .navbar {
   justify-content: space-between;
+  align-items: center ;
 }
 
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
 .nav-item {
   list-style: none;
   margin-right: 30px;
