--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@
   font-weight: 400;
   font-style: normal;
 }
-
 /* shared style */
 .display-flex {
   display: flex;
@@ -26,6 +25,17 @@
 }
 .bc-color{
   background-color: rgba(255, 144, 14, 0.1);
+
+}
+.btn-primary{
+  background-color: rgba(255, 144, 14, 1);
+  color: rgba(255, 255, 255, 1);
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 8px;
+
 }
 /* header style */
 
@@ -50,7 +60,37 @@
   font-size: 18px;
   color: rgba(66, 66, 66, 1);
 }
-.navbar, .nav-link{
+.navbar, .banner{
   max-width: 1440px;
-  margin: 0px auto;
+  margin: 0 auto;
+}
+
+/* banner style */
+.banner-content{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-details{
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.banner-img{
+  width: 100%;
+}
+/* responsive media query*/
+@media screen and (max-width:576px) {
+  .navbar, .nav-links{
+    flex-direction: column;
+  }
+  .nav-links{
+    gap: 10px;
+  }
 }
