--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,36 @@ main>section {
 .feature-description {
   font-size: 1rem;
 }
-
+/* fact section */
+.facts-container{
+  display: grid;
+  grid-template-columns:repeat(4, 1fr);
+ }
+.card{
+  border: 1px solid rgba(255, 144, 14, 1);
+  border-radius: 8px;
+  width: 240px;
+  height: 240px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.lorem{
+  max-width: 540px;
+  font-size: 1rem;
+  
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px; 
+}
 /* responsive media query*/
 @media screen and (max-width:576px) {
 
