--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ main>section {
   display: grid;
   grid-template-columns:repeat(4, 1fr);
  }
-.card{
+  .card{
   border: 1px solid rgba(255, 144, 14, 1);
   border-radius: 8px;
   width: 240px;
@@ -144,7 +144,7 @@ main>section {
 .lorem{
   max-width: 540px;
   font-size: 1rem;
-  
+
 }
 .fact-number{
   font-size: 2.8rem;
@@ -162,11 +162,16 @@ main>section {
 
   .navbar,
   .nav-links,
-  .teams {
+  .teams{
     flex-direction: column;
   }
-  .team-img-container{
-    grid-template-columns: repeat(1, 1fr);
+  .team-img-container, .facts-container{
+    grid-template-columns: 1fr;
+  }
+
+  .facts-container{
+    justify-items: center;
+    gap: 24px;
   }
   .our-features{
     margin-left: 20px;
@@ -174,13 +179,24 @@ main>section {
   .nav-links {
     gap: 10px;
   }
+  .facts-container{
+    grid-template-columns: 1fr;
+    justify-content: center;
+    gap: 10px;
+  }
 }
 /* medium device */
 @media screen and (min-width:576px) and (max-width:992px) {
-  .teams{
+  .teams,
+  .card{
     flex-direction: column;
   }
   .our-features{
     margin-left: 50px auto;  
+  }
+  .facts-container{
+    grid-template-columns: repeat(2,1fr);
+    gap: 5px;
+
   }
 }
