--- a/styles/style.css
+++ b/styles/style.css
@@ -157,6 +157,23 @@ main>section {
   font-weight: 600;
   margin-top: 10px; 
 }
+
+/* sponsor section */
+.sponsors-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+
+}
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+
+.sponsor-companies img{
+  filter: grayscale(100%);
+}
+
 /* responsive media query*/
 @media screen and (max-width:576px) {
 
@@ -165,11 +182,14 @@ main>section {
   .teams{
     flex-direction: column;
   }
-  .team-img-container, .facts-container{
+  .team-img-container,
+   .facts-container,
+   .sponsor-companies{
     grid-template-columns: 1fr;
   }
 
-  .facts-container{
+  .facts-container,
+  .sponsor-companies{
     justify-items: center;
     gap: 24px;
   }
@@ -197,6 +217,12 @@ main>section {
   .facts-container{
     grid-template-columns: repeat(2,1fr);
     gap: 5px;
+    justify-items: center;
 
+  }
+  .sponsor-companies{
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    justify-items: center;
   }
 }
