--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,21 @@ main>section {
   margin-bottom: 0;
 }
 
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.feature-architect{
+  width: 100%;
+}
 .section-title {
   font-weight: bold;
   font-size: 2.80rem;
@@ -213,7 +228,8 @@ main>section {
 
   .navbar,
   .nav-links,
-  .teams {
+  .features,
+  .teams  {
     flex-direction: column;
   }
 
@@ -232,7 +248,10 @@ main>section {
   .our-features {
     margin-left: 20px;
   }
-
+#experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+}
   .nav-links {
     gap: 10px;
   }
@@ -248,6 +267,7 @@ main>section {
 @media screen and (min-width:576px) and (max-width:992px) {
 
   .teams,
+  .feature,
   .card {
     flex-direction: column;
   }
@@ -267,5 +287,9 @@ main>section {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     justify-items: center;
+  }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
