--- a/styles/style.css
+++ b/styles/style.css
@@ -129,9 +129,10 @@ main>section {
 }
 
 /* features love section */
-.features{
+.features {
   gap: 140px;
 }
+
 #feature-section-title {
   border-left: 1px solid rgba(255, 144, 14, 1);
   padding-left: 20px;
@@ -151,7 +152,7 @@ main>section {
   margin-bottom: 0;
 }
 
-#experience-badge{
+#experience-badge {
   padding: 45px 42px;
   font-size: 1.5rem;
   font-weight: 500;
@@ -159,13 +160,15 @@ main>section {
   margin-top: -100px;
 }
 
-#experience-year{
+#experience-year {
   font-size: 4rem;
   font-weight: 700;
 }
-.feature-architect{
+
+.feature-architect {
   width: 100%;
 }
+
 .section-title {
   font-weight: bold;
   font-size: 2.80rem;
@@ -223,14 +226,36 @@ main>section {
   filter: grayscale(100%);
 }
 
+
+/* footer section */
+.footer-section {
+  background-color: rgba(255, 244, 231, 1);
+  border-radius: 8px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 190px;
+}
+
+.footer-title {
+  font-weight: 400;
+  font-size: 1.25rem;
+  flex-wrap: wrap;
+}
+
 /* responsive media query*/
 @media screen and (max-width:576px) {
 
   .navbar,
   .nav-links,
   .features,
-  .teams  {
+  .teams {
     flex-direction: column;
+  }
+
+  .footer-section {
+    flex-wrap: wrap;
   }
 
   .team-img-container,
@@ -248,10 +273,12 @@ main>section {
   .our-features {
     margin-left: 20px;
   }
-#experience-badge{
-  margin-top: 20px;
-  margin-left: 20px;
-}
+
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
   .nav-links {
     gap: 10px;
   }
@@ -288,7 +315,8 @@ main>section {
     gap: 20px;
     justify-items: center;
   }
-  #experience-badge{
+
+  #experience-badge {
     margin-top: 20px;
     margin-left: 20px;
   }
